--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.3.6",
+    "file-loader": "^6.2.0",
     "framer-motion": "^11.2.6",
     "next": "14.2.3",
     "react": "^18",
