--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^11.2.6",
     "next": "14.2.3",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3"
